2008-05-04  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Add attribute information to SymbolTable as ground work for
        various DontEnum and ReadOnly issues.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addVar):
        (KJS::CodeGenerator::CodeGenerator):
        (KJS::CodeGenerator::registerForLocal):
        (KJS::CodeGenerator::registerForLocalConstInit):
        (KJS::CodeGenerator::addConstant):
        * VM/Machine.cpp:
        (KJS::Machine::execute):
        * kjs/JSGlobalObject.cpp:
        (KJS::JSGlobalObject::saveLocalStorage):
        * kjs/JSVariableObject.cpp:
        (KJS::JSVariableObject::getPropertyNames):
        (KJS::JSVariableObject::getPropertyAttributes):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::symbolTablePut):
        (KJS::JSVariableObject::symbolTablePutWithAttributes):
        * kjs/SymbolTable.h:
        (KJS::SymbolTableEntry::SymbolTableEntry):
        (KJS::SymbolTableIndexHashTraits::emptyValue):
        * kjs/nodes.cpp:
        (KJS::getSymbolTableEntry):
        (KJS::ReadModifyResolveNode::optimizeVariableAccess):
        (KJS::AssignResolveNode::optimizeVariableAccess):
        (KJS::ProgramNode::initializeSymbolTable):

2008-05-04  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        More scaffolding for f.arguments.
        
        Store the register file associated with an ExecState in the ExecState.
        
        SunSpider reports no change.

        * kjs/JSGlobalObject.h:
        (KJS::JSGlobalObject::JSGlobalObjectData::JSGlobalObjectData): Moved
        registerFileStack above globalExec, so it gets initialized first.
        Removed remnants of old activation scheme.

2008-05-04  Maciej Stachowiak  <mjs@apple.com>

        Rubber stamped by Oliver.
        
        - renamed a few opcodes and fixed assembly formatting to accomodate the longest opcode
        
        equal --> eq
        nequal --> neq